--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -1,7 +1,10 @@
 ---
 ---
 
-@import "{{ site.theme }}";
+/*@import "{{ site.theme }}";*/
+
+@import "jekyll-theme-minimal";
+
 .wrapper {
  width:1100px;
 /*  width:100%;*/
