testing the new recommendations about how to use the Jekyll Minimal theme

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -1,9 +1,8 @@
 ---
 ---
 
-/*@import "{{ site.theme }}";*/
+@import "{{ site.theme }}";
 
-@import "jekyll-theme-minimal";
 
 .wrapper {
  width:1100px;
