--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -33,12 +33,12 @@ h1 {
     display:inline;
     
 
-h1 img {
+/*  h1 img {
 width:200px;
 display:inline;
 vertical-align:text-top;
 
-}
+}*/
 
 h1+ul {
 list-style-type: none;
