--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -31,7 +31,7 @@ text-align:left;
 
 h1 {
     display:inline;
-    
+  }  
 
 /*  h1 img {
 width:200px;
@@ -54,6 +54,7 @@ font-variant:small-caps;
 font-weight:bold;
 }
 
-h1+ul li::after {
+h1+ul li::after 
+{
  content: " | ";
 }
