--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -1,9 +1,7 @@
 ---
 ---
 
-/*@import "{{ site.theme }}";*/
-
-@import "jekyll-theme-minimal";
+@import "{{ site.theme }}";
 
 .wrapper {
  width:1100px;
@@ -26,13 +24,30 @@ p {
 text-align:justify;
 }
 
+
+
+
 footer p {
 text-align:left;
 }
 
-img {
+/*img {
 width:100px;
 display:inline;
+}*/
+
+h1 img {
+width:200px;
+display:inline;
+vertical-align:text-top;
+
+}
+
+p img {
+display:inline;
+/*max-width:80%;*/
+object-fit: cover; 
+    
 }
 
 h1+ul {
