--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -33,6 +33,7 @@ text-align:left;
 
 h1 {
     display:inline;
+    font-size:32px;
   }  
 
 h1 img {
@@ -55,6 +56,7 @@ list-style-type: none;
 padding:0px;
 margin-left:0px;
 margin-bottom:20px;
+margin-top:30px;
 }
 
 h1+ul li {
@@ -67,4 +69,13 @@ font-weight:bold;
 h1+ul li::after 
 {
  content: " | ";
+}
+
+h2 {
+    font-size:28px;
+}
+
+h3 {
+    font-size:24px;
+    
 }
