--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -61,7 +61,7 @@ margin-top:30px;
 
 h1+ul li {
 display: inline;
-font-size:110%;
+font-size:120%;
 font-variant:small-caps;
 font-weight:bold;
 }
@@ -77,5 +77,7 @@ h2 {
 
 h3 {
     font-size:24px;
+    text-indent:10%;
     
 }
+
